--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,15 +9,19 @@ description = "Python package to analyze sniffing data collected in the Dewan La
 readme = "README.md"
 requires-python = ">=3.12"
 license = { file = "LICENSE" }
-authors = [{ name = "Austin Pauley", email = "pauley@psy.fsu.edu" }]
+authors = [
+    { name = "Austin Pauley", email = "pauley@psy.fsu.edu" },
+    { name = "Adam Dewan", email = "dewan@psy.fsu.edu"}
+]
 
 dependencies = [
     "matplotlib",
     "numpy",
     "pandas",
     "scipy",
-    "dewan_h5>=1.1.0",
-    "tqdm"
+    "dewan_h5>=1.2.0",
+    "tqdm",
+    "numba"
 ]
 
 [project.optional-dependencies]
