--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ dependencies = [
     "scipy",
     "dewan_h5>=1.2.0",
     "tqdm",
-    "numba"
+    "numba",
+    "dewan-manual-curation",
 ]
 
 [project.optional-dependencies]
@@ -40,12 +41,14 @@ packages = ['sniffing']
 [project.scripts]
 sniffing_analysis = "sniffing.__main__:main"
 
+
 [tool.ruff]
 # Exclude a variety of commonly ignored directories.
 exclude = [
     ".bzr",
     ".direnv",
     ".eggs",
+    ".egg-info",
     ".git",
     ".git-rewrite",
     ".hg",
@@ -82,11 +85,32 @@ target-version = "py313"
 # Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
 # Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
 # McCabe complexity (`C901`) by default.
-select = ["E4", "E7", "E9", "F"]
-ignore = []
+select = [
+    "E",
+    "F",
+    "YTT",
+    "S",
+    "B",
+    "A",
+    "COM",
+    "C4",
+    "FA",
+    "ICN",
+    "INP",
+    "PIE",
+    "PYI",
+    "RET",
+    "SIM",
+    "ARG",
+    "NPY",
+    "PD",
+    "N",
+    "PERF",
+]
+ignore = ["COM812", "N806"]
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
-fixable = ["ALL"]
+fixable = []
 unfixable = []
 
 # Allow unused variables when underscore-prefixed.
@@ -118,3 +142,6 @@ docstring-code-format = false
 # This only has an effect when the `docstring-code-format` setting is
 # enabled.
 docstring-code-line-length = "dynamic"
+
+[tool.uv.sources]
+dewan-manual-curation = { git = "https://github.com/OlfactoryBehaviorLab/dewan_manual_curation" }
