values -> to_numpy(); stacklevel=2 for warnings; zip(strict=True) and some spacing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -107,7 +107,7 @@ select = [
     "N",
     "PERF",
 ]
-ignore = ["COM812", "N806"]
+ignore = ["COM812", "N806", "E501"]
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = []
