--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "tqdm",
     "numba",
     "dewan-manual-curation",
+    "dewan-utils>=0.1",
 ]
 
 [project.optional-dependencies]
